--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <!--Link para fontes usadas no site-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+     <link rel="manifest" href="manifest.json">
+     <script>
+        if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("sw.js")
+            .then(() => console.log("SW registrado:"))
+            .catch(err => console.log("Erro no SW:", err));
+        }
+    </script>
 </head>
 <body>
     <input id="close-menu" class="close-menu" type="checkbox" aria-label="close menu" role="button">
@@ -87,7 +96,7 @@
         </div>
     </section>
     
-    <footer id="footer" class=" footer white-bg">
+    <footer id="footer" class="footer white-bg">
         <p><a rel="nofollow" target="_blank" href="https://github.com/LuanGSiiss">Feito com <span class="heart">❤</span> por Luan Gerber Siiss</a></p>
     </footer>
 
